# libpspio

./: .bzrignore  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  .update-copyright.conf  AUTHORS  Doxyfile  Makefile.am  NEWS  README.libxc  README.macosx  README.md  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
config/data/: libpspio-config.yml.in  libpspio.pc.in
config/m4/: am_path_xml2.m4  fc_integer.m4  gsl.m4  libxc.m4  pio_search_check.m4  xml.m4
config/tests/: test_buildsys_all.sh  test_buildsys_fortran.sh  test_buildsys_libxc.sh  test_buildsys_plain.sh  test_buildsys_static.sh  test_buildsys_xml.sh
doc/: developers.txt  psp-formats.txt
fortran/: AUTHORS  Doxyfile  Makefile.am  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
fortran/config/m4/: ax_search_libpspio.m4  workarounds.m4
fortran/scripts/: make-fortran-constants.py
fortran/src/: Makefile.am  api_error_inc.F90  api_info_inc.F90  api_mesh_inc.F90  api_meshfunc_inc.F90  api_potential_inc.F90  api_projector_inc.F90  api_pspdata_inc.F90  api_pspinfo_inc.F90  api_qn_inc.F90  api_state_inc.F90  api_xc_inc.F90  fpspio.F90  interface_error_inc.F90  interface_info_inc.F90  interface_mesh_inc.F90  interface_meshfunc_inc.F90  interface_potential_inc.F90  interface_projector_inc.F90  interface_pspdata_inc.F90  interface_pspinfo_inc.F90  interface_qn_inc.F90  interface_state_inc.F90  interface_xc_inc.F90  pspiof.F90  test_fortran_io.F90
fortran/src/tests/: Makefile.am  fruit_error_test.F90  fruit_info_test.F90  fruit_mesh_basket.F90  fruit_mesh_test.F90  fruit_meshfunc_basket.F90  fruit_meshfunc_test.F90  gcov_fortran_report.in  m_error_test.F90  m_info_test.F90  m_mesh_basket.F90  m_mesh_test.F90  m_meshfunc_basket.F90  m_meshfunc_test.F90  test_fortran_error.F90  test_fortran_info.F90  test_fortran_io.F90  test_fortran_io_multiple.in  test_fortran_mesh.F90  test_fortran_meshfunc.F90
libxc/: Makefile.am
psp_references/UPF/: Li.UPF  README
psp_references/abinit1/: README
psp_references/abinit4/: README
psp_references/abinit5/: Pb.GGA-SO.pseu  README
psp_references/abinit6/: README
psp_references/abinit8/: 13_Al_psml.psp8  14_Si_psml.psp8  26_Fe_psml.psp8  78_Pt_1.psp8  78_Pt_2.psp8
psp_references/atom/: README
psp_references/fhi/: Cr.cpi  Cu_nlcc.cpi  Li.cpi  README
psp_references/fpmd/: Ar_ONCV_PBE-1.1.xml  Cu_ONCV_PBE-1.0.xml  Hf_ONCV_PBE-1.1.xml  Pb_ONCV_PBE-1.0.xml  W_ONCV_PBE-1.1.xml
psp_references/recpot/: Ca.recpot
psp_references/siesta/: README
scripts/: make-fortran-constants.py
src/: Makefile.am  ab2libxc.c  abinit.c  abinit.h  abinit6_read.c  abinit_fhi.c  abinit_fhi.c.THIS  abinit_format6.c  abinit_oncv.c  abinit_util.c  abinit_xc.c  check_pspio.c  check_pspio.h  check_pspio_error.c  check_pspio_info.c  check_pspio_mesh.c  check_pspio_meshfunc.c  check_pspio_potential.c  check_pspio_projector.c  check_pspio_pspdata.c  check_pspio_pspinfo.c  check_pspio_qn.c  check_pspio_state.c  check_pspio_xc.c  example_header_libxc_codes.h  fhi.c  fhi.h  gcov_report.in  interpolation.c  interpolation.h  jb_spline.c  jb_spline.h  libxccodes.h  nlcc_abinit.c  oncv.c  oncv.h  pspio.h  pspio_abinit.c  pspio_abinit.h  pspio_common.h  (+80 more)
src/fortran/: Makefile.am  api_info_inc.F90  api_mesh_inc.F90  api_meshfunc_inc.F90  api_potential_inc.F90  api_projector_inc.F90  api_pspdata_inc.F90  api_qn_inc.F90  api_state_inc.F90  api_xc_inc.F90  fpspio.F90  fpspio.f90  gcov_fortran_report.in  interface_info_inc.F90  interface_mesh_inc.F90  interface_meshfunc_inc.F90  interface_potential_inc.F90  interface_projector_inc.F90  interface_qn_inc.F90  interface_state_inc.F90  interface_xc_inc.F90  pspio_f90_lib.F90  pspio_f90_types.F90  pspio_fortran_c.c  pspio_fortran_f.F90  test_fortran.F90  test_fortran_error.F90  test_fortran_io.F90  test_fortran_io_multiple.in  test_fortran_memory.in
src/gcov/: analyze  analyze.in  rmgcda.in
tests/: Makefile.am  run_test_format.in  test_format.c
utils/: Makefile.am  pspio_diff.c  pspio_loop.c  test_pspio_formats.in
