#
# Copyright (C) 2011-2016 Yann Pouillon <devops@materialsevolution.es>
#
# This file is part of Libpspio.
#
# This Source Code Form is subject to the terms of the Mozilla Public License,
# version 2.0. If a copy of the MPL was not distributed with this file, You can
# obtain one at https://mozilla.org/MPL/2.0/.
#
# Libpspio is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the Mozilla Public License version 2.0 for more
# details.

#
# Top makefile for Libpspio-Fortran
#

# Autotools parameters
ACLOCAL_AMFLAGS = -I config/m4

# Main tasks
SUBDIRS = src

# Source tarball
EXTRA_DIST = \
  Doxyfile

DISTCLEANFILES = libpspio-fortran-*.tar.gz
