#
# Copyright (C) 2012 M. Oliveira, Y. Pouillon
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 3 of the License, or 
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
# $Id: Makefile.am 262 2012-11-05 13:03:41Z micael $
#

#
# Makefile for basic support of LibXC within Libpspio
#

                    # ------------------------------------ #

#
# Source files
#

# Exported C headers - keep this in alphabetical order
pio_libxc_hdrs = \
  pspio_xc_funcs.h

                    # ------------------------------------ #

#
# Build targets
#

# Headers
include_HEADERS = $(pio_libxc_hdrs)

# Documentation
EXTRA_DIST = README
